--- a/styles/style.css
+++ b/styles/style.css
@@ -130,7 +130,7 @@ main {
 Welcome Section Styling
 */
 #welcome-section {
-  height: 88.8vh;
+  height: 100vh;
 }
 
 #welcome-bg-img {
@@ -202,7 +202,29 @@ Welcome Section Styling
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 520px) {
+  #welcome-section {
+    height: 85.8vh;
+  }
+
+  #welcome-text {
+    top: -50%;
+  }
+
+  #welcome-text h1 {
+    font-size: 7vh;
+  }
+
+  #welcome-text h4 {
+    font-size: 5vh;
+  }
+
+  #welcome-text p {
+    font-size: 3vh;
+  }
+}
+
+@media screen and (max-width: 470px) {
   #welcome-section {
     height: 85.8vh;
   }
@@ -283,6 +305,20 @@ Projects Section Styling
 }
 .profile-link {
   margin: 10% auto;
+}
+
+@media screen and (min-width: 768px) {
+  .project-link {
+    width: 30%;
+    display: inline-block;
+    margin-right: 3%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .project-tile-name {
+    font-size: 2.5vh;
+  }
 }
 /*
 Contact Section Styling
